en cours, reparer, + profil en cours

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "adsiam-platform",
   "version": "1.0.0",
   "description": "Plateforme de formation pour aide à domicile et EHPAD",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "seed": "node scripts/seedDatabase.js",
     "db:sync": "node -e \"import('./models/index.js').then(({sequelize}) => sequelize.sync({force: false}))\"",
     "db:reset": "node -e \"import('./models/index.js').then(({sequelize}) => sequelize.sync({force: true}))\"",
