--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
   "author": "ADSIAM",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "sequelize": "^6.35.2",
+    "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "helmet": "^7.1.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4"
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
