--- a/package.json
+++ b/package.json
@@ -23,16 +23,22 @@
   "author": "ADSIAM",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.2",
     "helmet": "^7.1.0",
+    "ioredis": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.6",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
