--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "ADSIAM",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
