--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "helmet": "^7.1.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
+    "layouts": "^3.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
