--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -40,6 +41,7 @@
     "jsonwebtoken": "^9.0.2",
     "layouts": "^3.0.2",
     "nodemailer": "^7.0.6",
+    "pdfkit": "^0.17.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
