--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "^7.1.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
